# kaneo-cli

./: .gitignore  .onrezarelease.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  commitlint.config.js  install.ps1  install.sh  lefthook.yml  npm-README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: main.rs  output.rs
src/api/: client.rs  mod.rs  routes.rs  types.rs
src/auth/: mod.rs
src/cli/: activity_handler.rs  api_check_handler.rs  column_handler.rs  comment_handler.rs  external_link_handler.rs  invitation_handler.rs  label_handler.rs  link_handler.rs  login_handler.rs  mod.rs  notification_handler.rs  profile_handler.rs  project_handler.rs  resolve.rs  search_handler.rs  task_handler.rs  task_relation_handler.rs  time_entry_handler.rs  whoami_handler.rs  workspace_handler.rs
src/config/: mod.rs
src/upgrade/: mod.rs
tests/: validate_routes.rs
