[package]
name = "kaneo"
version = "0.9.0"
edition = "2024"
description = "CLI for Kaneo project management"
license = "MIT"
repository = "https://github.com/onreza/kaneo-cli"
homepage = "https://github.com/onreza/kaneo-cli"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
console = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
indicatif = "0.18"
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 4

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1
